# clay-dhall

./: .gitignore  ChangeLog.md  Jamroot  LICENSE  README.md  Setup.hs  cabal.config.ghc-8.4.4  cabal.project  clay-dhall.cabal  stack.yaml
.github/workflows/: haskell.yml
aux-list-path/src/: aux-list-path.hs
csrc/: clay.c
ctest/: Jamfile  add_builtin.c  error_handling.c  exec.c  input_file.c  type.c  type_compound.c  type_input_compound.c  type_input_simple.c  type_simple.c
ctest-input/: input1.dhall
doc/: Jamfile
doc/html/clay-dhall/: classes.html  clay-dhall_8h_source.html  files.html  group__group__customize.html  index.html  menudata.js  structcdhall__array-members.html  structcdhall__obj__.html  structcdhall__type__spec-members.html  structcdhall__type__spec.html  structcdhall__typed__ptr-members.html  structcdhall__typed__ptr.html  structcdhall__uitem__spec.html  structcdhall__union.html  structcdhall__union__spec-members.html  structcdhall__union__spec.html
docs/: Jamfile
docs/html/: clay-dhall.html
docs/html/clay-dhall/: _first_example.html  _r_e_a_d_m_e.html  annotated.html  classes.html  clay-dhall_8h.html  clay-dhall_8h_source.html  dir_00dc755dc77af22c485dffad27d58145.html  dir_d44c64559bbebec7f509842c48db8b23.html  globals.html  globals_func.html  globals_type.html  group__group__customize.html  group__group__error.html  group__group__error__notif.html  group__group__exec.html  group__group__general.html  group__group__host__type.html  group__group__manip.html  group__group__prettyprinting.html  group__group__type__spec.html  index.html  macro_8h_source.html  md__c_1_msys64_home_user_project_clay-dhall__r_e_a_d_m_e.html  menudata.js  modules.html  pages.html  structcdhall__array.html  structcdhall__field__spec-members.html  structcdhall__field__spec.html  structcdhall__funapp-members.html  structcdhall__funapp.html  structcdhall__func__spec-members.html  structcdhall__func__spec.html  structcdhall__record__spec-members.html  structcdhall__record__spec.html  structcdhall__type__spec.html  structcdhall__uitem__spec-members.html  structcdhall__uitem__spec.html  structcdhall__union-members.html  structcdhall__union__spec.html  (+2 more)
docs/html/clay-dhall/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_8.js  all_9.js  classes_0.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_8.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js
docs/md/: FirstExample.md
include/clay-dhall/: clay-dhall.h  macro.h  type.h
src/Clay/: Core.hs  Export.hs  Obj.hs  Type.hsc
windist/: Jamfile
