name:           clay-dhall
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/as-capabl/clay-dhall#readme>
homepage:       https://github.com/as-capabl/clay-dhall#readme
bug-reports:    https://github.com/as-capabl/clay-dhall/issues
author:         Hidenori Azuma
maintainer:     as.capabl@gmail.com
copyright:      2018 Hidenori Azuma
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/as-capabl/clay-dhall

library
  exposed-modules:
      Lib
  other-modules:
      Paths_clay_dhall
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , bytestring
    , vector
    , contravariant
    , mtl
    , lens
    , dhall >= 1.19 && < 2
  default-language: Haskell2010

foreign-library clay-dhall
  type:
    native-shared
  if os(windows)
    options: standalone
  hs-source-dirs:
      src
  other-modules:
      Clay.Type
    , Clay.Obj
    , Clay.Export
  include-dirs:
      include
  c-sources:
      csrc/clay.c
  install-includes:
      clay-dhall/*
  build-depends:
      base >=4.7 && <5
    , text
    , bytestring
    , vector
    , contravariant
    , mtl
    , lens
    , dhall >= 1.19 && < 2
  default-language: Haskell2010
