name:           clay-dhall
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/as-capabl/clay-dhall#readme>
homepage:       https://github.com/as-capabl/clay-dhall#readme
bug-reports:    https://github.com/as-capabl/clay-dhall/issues
author:         Hidenori Azuma
maintainer:     as.capabl@gmail.com
copyright:      2018 Hidenori Azuma
license:        BSD3
license-file:   LICENSE
build-type:     Custom
cabal-version:  2.0
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/as-capabl/clay-dhall

foreign-library clay-dhall
  type:
    native-shared
  if os(windows)
    options: standalone
  hs-source-dirs:
      src
  other-modules:
      Clay.Type
    , Clay.Core
    , Clay.Obj
    , Clay.Export
  include-dirs:
      include
  includes:
      clay-dhall/clay-dhall.h
    , clay-dhall/type.h
    , clay-dhall/macro.h
  c-sources:
      csrc/clay.c
  install-includes:
      clay-dhall/clay-dhall.h
    , clay-dhall/type.h
    , clay-dhall/macro.h
  build-depends:
      base >=4.7 && <5
    , containers
    , text
    , bytestring
    , vector
    , contravariant
    , mtl
    , lens
    , dhall == 1.20.1
    , prettyprinter
  build-tool-depends:
      cabal-plan:cabal-plan
  default-language: Haskell2010

executable aux-list-path
  default-language:    Haskell2010
  hs-source-dirs: aux-list-path/src
  main-is: aux-list-path.hs

  build-depends:
      base >=4.7 && <5
    , containers
    , cabal-plan
    , text

custom-setup
  setup-depends:
      base >=4.7 && <5
    , Cabal >= 2.0
    , containers
    , text
    , filepath
